set up TranscriptServiceTest